--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "create-react-class": "^15.7.0",
     "react": "^17.0.1",
+    "react-bootstrap-validation": "^0.1.11",
+    "react-date-picker": "^8.0.5",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-select": "^3.1.1",
+    "react-validation": "^3.0.7",
+    "validator": "^13.5.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
